# otroborrar

./: .gitignore  CMakeLists.txt  build.bat  enunciado.md  main.cpp
.github/: copilot-instructions.md
.github/agents/: vsa-auditor.agent.md  vsa-decomposer.agent.md  vsa-orchestator.agent.md  vsa-planner.agent.md  vsa-tdd-cpp-coder.agent.md  vsa-tdd-cpp-firmware-coder.agent.md  vsa-tdd-kotlin-coder.agent.md  vsa-tdd-python-coder.agent.md
.github/scripts/: generate_diagram.py  get_tasks.py
.github/skills/: gh-common.md
.github/workflows/: sync-architecture.agent.yml  update-architecture.yml  vsa-nightly-sync.yml
include/: transformations.h
src/: transformations.cpp  transformations.py
tests/: test_aplicacion_visualizacion_transformaciones.py  test_entrada_validacion_vector.py  test_flujo_y_validacion.cpp  test_integracion_ui_flujo_completo.py  test_output.cpp  test_parseo_validacion_transformaciones.py  test_parsing.cpp  test_transformations.cpp
